ディレクトリ階層の整理・不要ファイルの削除

--- a/deploy/vue-prod/Dockerfile
+++ b/deploy/vue-prod/Dockerfile
@@ -6,7 +6,9 @@ COPY ./frontend /frontend
 
 WORKDIR /frontend
 
-RUN yarn build
+RUN rm -rf node_modules
+
+RUN yarn && yarn build
 
 
 FROM nginx:alpine
