--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,3 +20,20 @@ services:
       - ../backend:/backend
     working_dir: /backend
     tty: true
+  
+  db:
+    image: mysql:8
+    volumes:
+      - db-store:/var/lib/mysql
+      - db-logs:/var/log
+      - ../docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: sample
+      MYSQL_USER: sample
+      MYSQL_PASSWORD: password
+
+volumes:
+  db-store:
+  db-logs:
+  
